# pulumi-powerplatform

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PulumiPlugin.yaml  README.md  pyproject.toml  schema.json
.github/workflows/: ci.yaml  release.yaml  sdk-gen.yaml  yaml-lint.yaml
docs/: _index.md  installation-configuration.md
docs/resources/: DlpPolicy.md  EnvironmentBackup.md  EnvironmentSettings.md  ManagedEnvironment.md  RoleAssignment.md
examples/billing_policy/: Pulumi.yaml  __main__.py
examples/dlp_policy/: Pulumi.yaml  __main__.py
examples/environment/: __main__.py
examples/environment_backup/: Pulumi.yaml  __main__.py
examples/environment_group/: Pulumi.yaml  __main__.py
examples/environment_settings/: __main__.py
examples/isv_contract/: Pulumi.yaml  __main__.py
examples/managed_environment/: Pulumi.yaml  __main__.py
examples/role_assignment/: Pulumi.yaml  __main__.py
scripts/: normalize-dotnet-sdk.sh  normalize-nodejs-sdk.py  patch-java-pom-metadata.py  regen-sdks.sh
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_powerplatform/: __init__.py  billing_policy.py  dlp_policy.py  environment_backup.py  environment_group.py  environment_settings.py  get_environments.py  isv_contract.py  managed_environment.py  provider.py  role_assignment.py
sdk/python/rpothin_powerplatform/: __init__.py  admin_management_application.py  billing_policy.py  data_record.py  dlp_policy.py  enterprise_policy_link.py  environment.py  environment_application_admin.py  environment_backup.py  environment_group.py  environment_settings.py  get_apps.py  get_connectors.py  get_data_records.py  get_flows.py  isv_contract.py  managed_environment.py  provider.py  role_assignment.py  tenant_settings.py
tests/: conftest.py  test_admin_management_application.py  test_admin_management_application_crud.py  test_billing_policy.py  test_billing_policy_crud.py  test_data_record.py  test_data_record_crud.py  test_dlp_policy.py  test_dlp_policy_crud.py  test_enterprise_policy_link.py  test_enterprise_policy_link_crud.py  test_environment.py  test_environment_application_admin.py  test_environment_application_admin_crud.py  test_environment_backup.py  test_environment_backup_crud.py  test_environment_crud.py  test_environment_group.py  test_environment_group_crud.py  test_environment_settings_crud.py  test_get_apps_invoke.py  test_get_connectors_invoke.py  test_get_data_records_invoke.py  test_get_environments_invoke.py  test_get_flows_invoke.py  test_isv_contract.py  test_isv_contract_crud.py  test_managed_environment.py  test_provider.py  test_raw_api_client.py  test_retry.py  test_role_assignment.py  test_role_assignment_crud.py  test_tenant_settings.py  test_tenant_settings_crud.py
(+385 files in other folders)
