[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpothin-powerplatform"
version = "0.1.0"
description = "A Pulumi custom provider for Microsoft Power Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Raphael Pothin" },
]
keywords = ["pulumi", "power-platform", "microsoft", "infrastructure-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pulumi>=3.0.0",
    "powerplatform-management>=2.0.0",
    "azure-identity>=1.15.0",
    "azure-identity-broker>=1.0.0",
    "microsoft-kiota-authentication-azure>=1.0.0",
    "microsoft-kiota-http>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/rpothin/pulumi-powerplatform"
Repository = "https://github.com/rpothin/pulumi-powerplatform"
Issues = "https://github.com/rpothin/pulumi-powerplatform/issues"

[tool.setuptools.packages.find]
where = ["provider"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
