[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpothin-powerplatform"
version = "${VERSION}"
description = "Pulumi SDK for Microsoft Power Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Raphael Pothin" },
]
keywords = ["pulumi", "power-platform", "microsoft", "infrastructure-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["pulumi>=3.0.0,<4.0.0"]

[project.urls]
Homepage = "https://github.com/rpothin/pulumi-powerplatform"
Repository = "https://github.com/rpothin/pulumi-powerplatform"
Issues = "https://github.com/rpothin/pulumi-powerplatform/issues"
